--- a/src/main/resources/com/example/ismoney/Transaction/TransactionForm.fxml
+++ b/src/main/resources/com/example/ismoney/Transaction/TransactionForm.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionFormController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #63DBF3;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionFormController">
    <children>
       <Label layoutX="200.0" layoutY="25.0" text="Tambah Transaksi" textFill="WHITE">
          <font>
@@ -42,6 +37,6 @@
             <Font size="13.0" />
          </font></Label>
       <Button layoutX="438.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleSaveTransaction" text="Simpan" />
-      <Button fx:id="handleCancel" layoutX="507.0" layoutY="340.0" mnemonicParsing="false" text="Batal" />
+      <Button fx:id="handleCancel" layoutX="507.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleCancel" text="Batal" />
    </children>
 </AnchorPane>
