--- a/src/main/resources/com/example/ismoney/Login.fxml
+++ b/src/main/resources/com/example/ismoney/Login.fxml
@@ -23,7 +23,7 @@
                                 <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
                             </VBox.margin>
                         </Label>
-                        <TextField fx:id="emailField" prefHeight="30.0" prefWidth="200.0" promptText="Email" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins">
+                        <TextField fx:id="emailOrUsernameField" prefHeight="30.0" prefWidth="200.0" promptText="Email/Username" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins">
                             <font>
                                 <Font name="Segoe UI" size="12.0" />
                             </font>
@@ -34,7 +34,7 @@
                                 <Insets bottom="4.0" left="10.0" top="4.0" />
                             </padding>
                         </TextField>
-                        <TextField fx:id="passwordField" prefHeight="30.0" prefWidth="200.0" promptText="Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins">
+                        <PasswordField fx:id="passwordField" prefHeight="30.0" prefWidth="200.0" promptText="Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins">
                             <font>
                                 <Font name="Segoe UI" size="12.0" />
                             </font>
@@ -44,7 +44,7 @@
                             <padding>
                                 <Insets bottom="4.0" left="10.0" top="4.0" />
                             </padding>
-                        </TextField>
+                        </PasswordField>
                         <Label fx:id="errorMessage" text="" textFill="RED" visible="false" wrapText="true">
                             <font>
                                 <Font size="12.0" />
@@ -55,17 +55,9 @@
                                 <Font size="12.0" />
                             </font>
                         </Label>
-                        <Button fx:id="loginBtn" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: rgba(58, 162, 233, 0.7); -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 14px; -fx-background-radius: 7;" text="Masuk" textFill="WHITE">
+                        <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLogin" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: rgba(58, 162, 233, 0.7); -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 14px; -fx-background-radius: 7;" text="Masuk" textFill="WHITE">
                             <font>
                                 <Font name="Segoe UI" size="12.0" />
-                            </font>
-                            <VBox.margin>
-                                <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
-                            </VBox.margin>
-                        </Button>
-                        <Button fx:id="googleLoginBtn" maxWidth="Infinity" prefHeight="40.0" style="-fx-background-color: #8c0093; -fx-background-radius: 7; -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 14px;" text="Masuk Dengan Google" textFill="WHITE">
-                            <font>
-                                <Font size="14.0" />
                             </font>
                             <VBox.margin>
                                 <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
@@ -74,7 +66,7 @@
                         <HBox alignment="CENTER" prefHeight="13.0" prefWidth="156.0">
                             <children>
                                 <Label prefHeight="16.0" prefWidth="116.0" style="-fx-font-family: Poppins;" text="Belum punya akun?" textFill="#5c5d5e" />
-                                <Label fx:id="signupLabel" style="-fx-font-family: Poppins;" text="Daftar" textFill="#0f76dc" />
+                                <Label fx:id="signupLabel" onMouseClicked="#onSignupClick" style="-fx-font-family: Poppins;" text="Daftar" textFill="#0f76dc" />
                             </children>
                             <VBox.margin>
                                 <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
