--- a/src/main/resources/com/example/ismoney/Register.fxml
+++ b/src/main/resources/com/example/ismoney/Register.fxml
@@ -45,7 +45,7 @@
                         <Insets bottom="4.0" left="10.0" top="4.0" />
                      </padding>
                   </TextField>
-                  <TextField fx:id="passwordField" prefHeight="30.0" prefWidth="200.0" promptText="Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins;">
+                  <PasswordField fx:id="passwordField" prefHeight="30.0" prefWidth="200.0" promptText="Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins;">
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
@@ -55,8 +55,8 @@
                      <padding>
                         <Insets bottom="4.0" left="10.0" top="4.0" />
                      </padding>
-                  </TextField>
-                  <TextField fx:id="confirmPasswordField" prefHeight="30.0" prefWidth="200.0" promptText="Konfirmasi Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins;">
+                  </PasswordField>
+                  <PasswordField fx:id="confirmPasswordField" prefHeight="30.0" prefWidth="200.0" promptText="Konfirmasi Kata Sandi" style="-fx-background-color: rgba(217, 217, 217, 0.8); -fx-background-radius: 5; -fx-font-family: Poppins;">
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
@@ -66,18 +66,13 @@
                      <padding>
                         <Insets bottom="4.0" left="10.0" top="4.0" />
                      </padding>
-                  </TextField>
+                  </PasswordField>
                   <Label fx:id="errorMessage" text="" textFill="RED" visible="false" wrapText="true">
                      <font>
                         <Font size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="successMessage" text="" textFill="GREEN" visible="false" wrapText="true">
-                     <font>
-                        <Font size="12.0" />
-                     </font>
-                  </Label>
-                  <Button fx:id="signUpBtn" mnemonicParsing="false" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: rgba(58, 162, 233, 0.7); -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 14px; -fx-background-radius: 7;" text="Daftar" textFill="WHITE">
+                  <Button fx:id="signupButton" mnemonicParsing="false" onAction="#onSignup" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: rgba(58, 162, 233, 0.7); -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 14px; -fx-background-radius: 7;" text="Daftar" textFill="WHITE">
                      <font>
                         <Font name="Segoe UI" size="12.0" />
                      </font>
@@ -85,18 +80,15 @@
                         <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="googleSignUpButton" maxWidth="Infinity" prefHeight="40.0" style="-fx-background-color: #8c0093; -fx-background-radius: 7; -fx-font-family: Poppins; -fx-font-weight: Bold; -fx-font-size: 14px;" text="Daftar dengan Google" textFill="WHITE">
+                  <Label fx:id="successMessage" text="" textFill="GREEN" visible="false" wrapText="true">
                      <font>
-                        <Font size="14.0" />
+                        <Font size="12.0" />
                      </font>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
-                     </VBox.margin>
-                  </Button>
+                  </Label>
                   <HBox alignment="CENTER" prefHeight="13.0" prefWidth="156.0">
                      <children>
                         <Label prefHeight="16.0" prefWidth="116.0" style="-fx-font-family: Poppins;" text="Sudah memiliki akun?" textFill="#5c5d5e" />
-                        <Label fx:id="loginLabel" style="-fx-font-family: Poppins;" text="Masuk" textFill="#0f76dc" />
+                        <Label fx:id="loginLabel" style="-fx-font-family: Poppins; -fx-cursor: hand;" text="Masuk" textFill="#0f76dc" onMouseClicked="#onLoginClick"/>
                      </children>
                      <VBox.margin>
                         <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
