--- a/src/main/resources/com/example/ismoney/Dashboard.fxml
+++ b/src/main/resources/com/example/ismoney/Dashboard.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.DashboardController">
+<AnchorPane prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.DashboardController">
    <children>
       <Pane layoutX="74.0" layoutY="54.0" prefHeight="145.0" prefWidth="633.0" style="-fx-background-color: #ffffff; -fx-background-radius: 15;">
          <children>
@@ -13,18 +17,18 @@
                   <Font size="17.0" />
                </font>
             </Label>
-            <Label layoutX="229.0" layoutY="32.0" text="Income">
+            <Label layoutX="212.0" layoutY="35.0" text="Pemasukan">
                <font>
-                  <Font size="17.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="229.0" layoutY="82.0" text="Expense">
+            <Label layoutX="211.0" layoutY="85.0" text="Pengeluaran">
                <font>
-                  <Font size="17.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
             <DatePicker layoutX="21.0" layoutY="73.0" />
-            <Label layoutX="27.0" layoutY="22.0" prefHeight="49.0" prefWidth="162.0" text="SUMMARY">
+            <Label layoutX="23.0" layoutY="22.0" prefHeight="49.0" prefWidth="174.0" text="RINGKASAN">
                <font>
                   <Font name="Arial Black" size="25.0" />
                </font>
@@ -34,12 +38,12 @@
             <TextField editable="false" layoutX="486.0" layoutY="45.0" prefHeight="25.0" prefWidth="124.0" style="-fx-border-color: #63DBF3;" />
          </children>
       </Pane>
-      <Button fx:id="savingGoalButton" layoutX="89.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleSavingGoalButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Saving Goal" textFill="WHITE">
+      <Button fx:id="savingGoalButton" layoutX="89.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleSavingGoalButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Target Tabungan" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="transactionButton" layoutX="271.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Transaction" textFill="WHITE">
+      <Button fx:id="transactionButton" layoutX="271.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Transaksi" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
