--- a/src/main/resources/com/example/ismoney/Transaction/TransactionForm.fxml
+++ b/src/main/resources/com/example/ismoney/Transaction/TransactionForm.fxml
@@ -1,42 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #63DBF3;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionFormController">
+<AnchorPane prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionFormController">
    <children>
-      <Label layoutX="200.0" layoutY="25.0" text="Tambah Transaksi" textFill="WHITE">
+      <Label layoutX="212.0" layoutY="43.0" prefHeight="47.0" prefWidth="354.0" text="Tambah Transaksi" textFill="#8c0093">
          <font>
-            <Font name="System Bold" size="26.0" />
+            <Font name="Arial Black" size="32.0" />
          </font>
       </Label>
-      <Label layoutX="73.0" layoutY="131.0" text="Tipe Transaksi" textFill="WHITE">
-         <font>
-            <Font size="13.0" />
-         </font></Label>
-      <TextField fx:id="amountField" layoutX="215.0" layoutY="90.0" />
-      <ComboBox fx:id="typeComboBox" layoutX="215.0" layoutY="127.0" prefWidth="150.0" />
-      <Label layoutX="73.0" layoutY="104.0" text="Nominal" textFill="WHITE">
-         <font>
-            <Font size="13.0" />
-         </font></Label>
-      <ComboBox fx:id="categoryComboBox" layoutX="215.0" layoutY="167.0" prefWidth="150.0" />
-      <Label layoutX="73.0" layoutY="171.0" text="Category" textFill="WHITE">
-         <font>
-            <Font size="13.0" />
-         </font></Label>
-      <DatePicker fx:id="datePicker" layoutX="215.0" layoutY="207.0" />
-      <Label layoutX="73.0" layoutY="211.0" text="Tanggal Transaksi" textFill="WHITE">
-         <font>
-            <Font size="13.0" />
-         </font></Label>
-      <TextArea fx:id="noteField" layoutX="210.0" layoutY="249.0" prefHeight="68.0" prefWidth="228.0" />
-      <Label layoutX="72.0" layoutY="255.0" text="Catatan" textFill="WHITE">
-         <font>
-            <Font size="13.0" />
-         </font></Label>
-      <Button layoutX="438.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleSaveTransaction" text="Simpan" />
-      <Button fx:id="handleCancel" layoutX="507.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleCancel" text="Batal" />
+      <Pane layoutX="155.0" layoutY="103.0" prefHeight="323.0" prefWidth="476.0" style="-fx-background-color: #ffffff;">
+         <children>
+            <Label layoutX="39.0" layoutY="37.0" text="Nominal">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="38.0" layoutY="85.0" text="Tipe Transaksi">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="36.0" layoutY="129.0" text="Kategori">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="34.0" layoutY="177.0" text="Tanggal Transaksi">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="noteField" layoutX="184.0" layoutY="227.0" prefHeight="68.0" prefWidth="228.0" />
+            <DatePicker fx:id="datePicker" layoutX="184.0" layoutY="177.0" />
+            <ComboBox fx:id="categoryComboBox" layoutX="184.0" layoutY="129.0" prefWidth="150.0" />
+            <ComboBox fx:id="typeComboBox" layoutX="184.0" layoutY="85.0" prefWidth="150.0" />
+            <TextField fx:id="amountField" layoutX="187.0" layoutY="37.0" />
+            <Label layoutX="35.0" layoutY="227.0" text="Catatan">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Button layoutX="358.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleSaveTransaction" prefHeight="25.0" prefWidth="133.0" text="Simpan" />
+      <Button fx:id="handleCancel" layoutX="504.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="127.0" text="Batal" />
    </children>
 </AnchorPane>
