--- a/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
+++ b/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.ismoney.Transaction.TransactionList"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionListController">
+   <children>
+      <TableView layoutX="28.0" layoutY="150.0" prefHeight="299.0" prefWidth="495.0">
+        <columns>
+          <TableColumn prefWidth="83.0" text="Tanggal" />
+          <TableColumn prefWidth="109.0" text="Pendapatan" />
+            <TableColumn prefWidth="109.0" text="Pengeluaran" />
+            <TableColumn prefWidth="98.0" text="Kategori" />
+            <TableColumn prefWidth="95.0" text="Total" />
+        </columns>
+      </TableView>
+      <Button layoutX="377.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Tambah Transaksi" />
+      <LineChart layoutX="523.0" layoutY="172.0" prefHeight="277.0" prefWidth="287.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </LineChart>
+      <Label layoutX="313.0" layoutY="35.0" prefHeight="47.0" prefWidth="354.0" text="Daftar Transaksi" textFill="#8c0093">
+         <font>
+            <Font name="Arial Black" size="32.0" />
+         </font>
+      </Label>
+      <Label layoutX="571.0" layoutY="155.0" prefHeight="17.0" prefWidth="102.0" text="Chart ">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <TextField layoutX="101.0" layoutY="119.0" prefHeight="25.0" prefWidth="159.0" />
+      <Button layoutX="28.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="69.0" text="Cari" />
+      <ComboBox layoutX="276.0" layoutY="119.0" prefHeight="25.0" prefWidth="93.0" promptText="Filter" />
+   </children>
 </AnchorPane>
