--- a/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
+++ b/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
@@ -14,16 +14,16 @@
 
 <AnchorPane prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionListController">
    <children>
-      <TableView layoutX="28.0" layoutY="150.0" prefHeight="299.0" prefWidth="495.0">
+      <TableView fx:id="transactionTable" layoutX="28.0" layoutY="150.0" prefHeight="299.0" prefWidth="495.0">
         <columns>
-          <TableColumn prefWidth="83.0" text="Tanggal" />
-          <TableColumn prefWidth="109.0" text="Pendapatan" />
-            <TableColumn prefWidth="109.0" text="Pengeluaran" />
-            <TableColumn prefWidth="98.0" text="Kategori" />
-            <TableColumn prefWidth="95.0" text="Total" />
+          <TableColumn fx:id="dateColumn" prefWidth="83.0" text="Tanggal" />
+          <TableColumn fx:id="incomeColumn" prefWidth="109.0" text="Pendapatan" />
+            <TableColumn fx:id="expenseColumn" prefWidth="109.0" text="Pengeluaran" />
+            <TableColumn fx:id="categoryColumn" prefWidth="98.0" text="Kategori" />
+            <TableColumn fx:id="totalColumn" prefWidth="95.0" text="Total" />
         </columns>
       </TableView>
-      <Button layoutX="377.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Tambah Transaksi" />
+      <Button fx:id="addTransactionButton" layoutX="377.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleAddTransaction" prefHeight="25.0" prefWidth="139.0" text="Tambah Transaksi" />
       <LineChart layoutX="523.0" layoutY="172.0" prefHeight="277.0" prefWidth="287.0">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
@@ -42,8 +42,10 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <TextField layoutX="101.0" layoutY="119.0" prefHeight="25.0" prefWidth="159.0" />
-      <Button layoutX="28.0" layoutY="119.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="69.0" text="Cari" />
-      <ComboBox layoutX="276.0" layoutY="119.0" prefHeight="25.0" prefWidth="93.0" promptText="Filter" />
+      <TextField fx:id="searchField" layoutX="101.0" layoutY="119.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="159.0" />
+      <Button fx:id="searchButton" layoutX="28.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleFilter" prefHeight="25.0" prefWidth="69.0" text="Cari" />
+      <ComboBox fx:id="filterComboBox" layoutX="276.0" layoutY="119.0" prefHeight="25.0" prefWidth="93.0" promptText="Filter" />
+      <Button fx:id="editButton" layoutX="471.0" layoutY="459.0" mnemonicParsing="false" text="Edit" />
+      <Button fx:id="deleteButton" layoutX="405.0" layoutY="459.0" mnemonicParsing="false" text="Hapus" />
    </children>
 </AnchorPane>
