--- a/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
+++ b/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
@@ -23,32 +23,35 @@
                 <TableColumn fx:id="totalColumn" prefWidth="95.0" text="Total" />
             </columns>
         </TableView>
+
         <Button fx:id="addTransactionButton" layoutX="377.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleAddTransaction" prefHeight="25.0" prefWidth="139.0" text="Tambah Transaksi" />
 
-        <!-- Updated LineChart with fx:id -->
-        <LineChart fx:id="lineChart" layoutX="523.0" layoutY="172.0" prefHeight="277.0" prefWidth="257.0" title="Grafik Transaksi">
+        <!-- Clean LineChart like in the image -->
+        <LineChart fx:id="lineChart" animated="true" createSymbols="true" layoutX="523.0" layoutY="150.0" legendVisible="true" prefHeight="299.0" prefWidth="257.0" style="-fx-background-color: white; -fx-border-color: #E0E0E0; -fx-border-width: 1;" title="Data Keuangan">
             <xAxis>
-                <CategoryAxis label="Tanggal" side="BOTTOM" />
+                <CategoryAxis label="" side="BOTTOM" style="-fx-tick-label-font-size: 10px; -fx-tick-label-fill: #666666;" tickLabelsVisible="true" tickMarkVisible="false" />
             </xAxis>
             <yAxis>
-                <NumberAxis label="Jumlah (Rp)" side="LEFT" />
+                <NumberAxis forceZeroInRange="false" label="" side="LEFT" style="-fx-tick-label-font-size: 10px; -fx-tick-label-fill: #666666;" tickLabelsVisible="true" tickMarkVisible="false" />
             </yAxis>
         </LineChart>
 
-        <Label layoutX="41.0" layoutY="40.0" prefHeight="47.0" prefWidth="354.0" text="Daftar Transaksi" textFill="#8c0093">
+        <Label layoutX="270.0" layoutY="46.0" prefHeight="47.0" prefWidth="354.0" text="Daftar Transaksi" textFill="#8c0093">
             <font>
                 <Font name="Arial Black" size="32.0" />
             </font>
         </Label>
-        <Label layoutX="571.0" layoutY="155.0" prefHeight="17.0" prefWidth="102.0" text="Grafik Keuangan">
+
+        <Label layoutX="589.0" layoutY="134.0" prefHeight="21.0" prefWidth="169.0" text="Grafik Keuangan">
             <font>
                 <Font name="System Bold" size="15.0" />
             </font>
         </Label>
+
         <TextField fx:id="searchField" layoutX="101.0" layoutY="119.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="159.0" promptText="Cari kategori/catatan..." />
         <Button fx:id="searchButton" layoutX="28.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleFilter" prefHeight="25.0" prefWidth="69.0" text="Cari" />
         <ComboBox fx:id="filterComboBox" layoutX="276.0" layoutY="119.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="93.0" promptText="Filter" />
-        <Button fx:id="editButton" layoutX="471.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleEdit" prefHeight="25.0" prefWidth="52.0" text="Edit" />
-        <Button fx:id="deleteButton" layoutX="405.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="25.0" prefWidth="60.0" text="Hapus" />
+        <Button fx:id="editButton" layoutX="109.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleEdit" prefHeight="25.0" prefWidth="52.0" text="Edit" />
+        <Button fx:id="deleteButton" layoutX="33.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="25.0" prefWidth="60.0" text="Hapus" />
     </children>
 </AnchorPane>
