--- a/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
+++ b/src/main/resources/com/example/ismoney/Transaction/TransactionList.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.TransactionListController">
     <children>
-        <TableView fx:id="transactionTable" layoutX="28.0" layoutY="150.0" prefHeight="299.0" prefWidth="495.0">
+        <TableView fx:id="transactionTable" layoutX="42.0" layoutY="265.0" prefHeight="219.0" prefWidth="510.0">
             <columns>
                 <TableColumn fx:id="dateColumn" prefWidth="83.0" text="Tanggal" />
                 <TableColumn fx:id="incomeColumn" prefWidth="109.0" text="Pendapatan" />
@@ -24,10 +24,10 @@
             </columns>
         </TableView>
 
-        <Button fx:id="addTransactionButton" layoutX="377.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleAddTransaction" prefHeight="25.0" prefWidth="139.0" text="Tambah Transaksi" />
+        <Button fx:id="addTransactionButton" layoutX="560.0" layoutY="382.0" mnemonicParsing="false" onAction="#handleAddTransaction" prefHeight="25.0" prefWidth="139.0" text="Tambah Transaksi" />
 
         <!-- Clean LineChart like in the image -->
-        <LineChart fx:id="lineChart" animated="true" createSymbols="true" layoutX="523.0" layoutY="150.0" legendVisible="true" prefHeight="299.0" prefWidth="257.0" style="-fx-background-color: white; -fx-border-color: #E0E0E0; -fx-border-width: 1;" title="Data Keuangan">
+        <LineChart fx:id="lineChart" animated="true" createSymbols="true" layoutX="40.0" layoutY="76.0" legendVisible="true" prefHeight="177.0" prefWidth="704.0" style="-fx-background-color: white; -fx-border-color: #E0E0E0; -fx-border-width: 1;">
             <xAxis>
                 <CategoryAxis label="" side="BOTTOM" style="-fx-tick-label-font-size: 10px; -fx-tick-label-fill: #666666;" tickLabelsVisible="true" tickMarkVisible="false" />
             </xAxis>
@@ -36,22 +36,16 @@
             </yAxis>
         </LineChart>
 
-        <Label layoutX="270.0" layoutY="46.0" prefHeight="47.0" prefWidth="354.0" text="Daftar Transaksi" textFill="#8c0093">
+        <Label layoutX="274.0" layoutY="30.0" prefHeight="47.0" prefWidth="354.0" text="Daftar Transaksi" textFill="#8c0093">
             <font>
                 <Font name="Arial Black" size="32.0" />
             </font>
         </Label>
 
-        <Label layoutX="589.0" layoutY="134.0" prefHeight="21.0" prefWidth="169.0" text="Grafik Keuangan">
-            <font>
-                <Font name="System Bold" size="15.0" />
-            </font>
-        </Label>
-
-        <TextField fx:id="searchField" layoutX="101.0" layoutY="119.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="159.0" promptText="Cari kategori/catatan..." />
-        <Button fx:id="searchButton" layoutX="28.0" layoutY="119.0" mnemonicParsing="false" onAction="#handleFilter" prefHeight="25.0" prefWidth="69.0" text="Cari" />
-        <ComboBox fx:id="filterComboBox" layoutX="276.0" layoutY="119.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="93.0" promptText="Filter" />
-        <Button fx:id="editButton" layoutX="109.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleEdit" prefHeight="25.0" prefWidth="52.0" text="Edit" />
-        <Button fx:id="deleteButton" layoutX="33.0" layoutY="459.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="25.0" prefWidth="60.0" text="Hapus" />
+        <TextField fx:id="searchField" layoutX="637.0" layoutY="273.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="112.0" promptText="Cari kategori/catatan..." />
+        <Button fx:id="searchButton" layoutX="560.0" layoutY="273.0" mnemonicParsing="false" onAction="#handleFilter" prefHeight="25.0" prefWidth="69.0" text="Cari" />
+        <ComboBox fx:id="filterComboBox" layoutX="560.0" layoutY="308.0" onAction="#handleFilter" prefHeight="25.0" prefWidth="129.0" promptText="Filter" />
+        <Button fx:id="editButton" layoutX="560.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleEdit" prefHeight="25.0" prefWidth="60.0" text="Edit" />
+        <Button fx:id="deleteButton" layoutX="632.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="25.0" prefWidth="60.0" text="Hapus" />
     </children>
 </AnchorPane>
