--- a/src/main/resources/com/example/ismoney/Dashboard.fxml
+++ b/src/main/resources/com/example/ismoney/Dashboard.fxml
@@ -8,25 +8,13 @@
    <children>
       <Pane layoutX="74.0" layoutY="54.0" prefHeight="145.0" prefWidth="633.0" style="-fx-background-color: #ffffff; -fx-background-radius: 15;">
          <children>
-            <Label layoutX="441.0" layoutY="45.0" text="Total">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
-            <Label layoutX="229.0" layoutY="32.0" text="Income">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
-            <Label layoutX="229.0" layoutY="82.0" text="Expense">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
+            <Label layoutX="449.0" layoutY="49.0" text="Total" />
+            <Label layoutX="229.0" layoutY="38.0" text="Pemasukan" />
+            <Label layoutX="229.0" layoutY="86.0" text="Pengeluaran" />
             <DatePicker layoutX="21.0" layoutY="73.0" />
-            <Label layoutX="27.0" layoutY="22.0" prefHeight="49.0" prefWidth="162.0" text="SUMMARY">
+            <Label layoutX="27.0" layoutY="22.0" prefHeight="49.0" prefWidth="162.0" text="RINGKASAN">
                <font>
-                  <Font name="Arial Black" size="25.0" />
+                  <Font name="Arial Black" size="23.0" />
                </font>
             </Label>
             <TextField editable="false" layoutX="302.0" layoutY="33.0" prefHeight="25.0" prefWidth="124.0" style="-fx-border-color: #63DBF3;" />
@@ -34,20 +22,25 @@
             <TextField editable="false" layoutX="486.0" layoutY="45.0" prefHeight="25.0" prefWidth="124.0" style="-fx-border-color: #63DBF3;" />
          </children>
       </Pane>
-      <Button fx:id="savingGoalButton" layoutX="89.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleSavingGoalButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Saving Goal" textFill="WHITE">
+      <Button fx:id="savingGoalButton" layoutX="89.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleSavingGoalButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Target Tabungan" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="transactionButton" layoutX="271.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Transaction" textFill="WHITE">
+      <Button fx:id="transactionButton" layoutX="271.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Transaksi" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
       <Pane layoutX="74.0" layoutY="249.0" prefHeight="200.0" prefWidth="633.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Label layoutX="132.0" layoutY="92.0" text="Ini nanti bebas buat apa ya dip ntah kea log expenxe sama income hari ini" />
+            <Label layoutX="132.0" layoutY="92.0" text="Riwayat transaksi dan aktivitas keuangan hari ini akan ditampilkan di sini" />
          </children>
       </Pane>
+      <Button fx:id="logOutBtn" layoutX="556.0" layoutY="458.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #df0000;" text="Keluar" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
