--- a/src/main/resources/com/example/ismoney/Register.fxml
+++ b/src/main/resources/com/example/ismoney/Register.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="491.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.HelloController">
+<AnchorPane prefHeight="491.0" prefWidth="756.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.IsMoneyController">
    <children>
       <Pane fx:id="backgroundPanel" layoutY="-4.0" prefHeight="498.0" prefWidth="780.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #FFFFFF, #63DBF3);">
          <opaqueInsets>
@@ -87,8 +87,8 @@
                   </Label>
                   <HBox alignment="CENTER" prefHeight="13.0" prefWidth="156.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="116.0" style="-fx-font-family: Poppins;" text="Sudah memiliki akun?" textFill="#5c5d5e" />
-                        <Label fx:id="loginLabel" style="-fx-font-family: Poppins; -fx-cursor: hand;" text="Masuk" textFill="#0f76dc" onMouseClicked="#onLoginClick"/>
+                        <Label prefHeight="18.0" prefWidth="128.0" style="-fx-font-family: Poppins;" text="Sudah memiliki akun?  " textFill="#5c5d5e" />
+                        <Label fx:id="loginLabel" onMouseClicked="#onLoginClick" style="-fx-font-family: Poppins; -fx-cursor: hand;" text="Masuk" textFill="#0f76dc" />
                      </children>
                      <VBox.margin>
                         <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
