--- a/src/main/resources/com/example/ismoney/savingGoals/savingGoalList.fxml
+++ b/src/main/resources/com/example/ismoney/savingGoals/savingGoalList.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="491.0" prefWidth="756.0" style="-fx-background-color: #63DBF3;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.savingGoalListController">
-    <Label layoutX="298.0" layoutY="25.0" text="Daftar Goals" textFill="WHITE">
+    <Label layoutX="232.0" layoutY="25.0" text="Daftar Target Tabungan" textFill="WHITE">
         <font>
             <Font name="System Bold" size="26.0" />
         </font>
@@ -21,17 +21,17 @@
             <TextField fx:id="addSavingAmountField" prefWidth="150.0" promptText="Nominal" style=" -fx-border-color: #ddd;" />
             <Button fx:id="addSavingButton" prefHeight="30.0" style="-fx-background-color: #8c0093; -fx-text-fill: white; -fx-background-radius: 5; -fx-font-weight: bold;" text="Tambah" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="refreshButton" prefHeight="30.0" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-background-radius: 5;" text="Refresh" />
+            <Button fx:id="refreshButton" prefHeight="30.0" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-background-radius: 5;" text="Perbarui" />
         </HBox>
         <VBox style="-fx-background-color: white; -fx-background-radius: 10; -fx-padding: 20;" VBox.vgrow="ALWAYS">
             <TableView fx:id="goalTableView" VBox.vgrow="ALWAYS">
                 <columns>
-                    <TableColumn fx:id="goalNameColumn" prefWidth="150.0" text="Goal Name" />
-                    <TableColumn fx:id="targetAmountColumn" prefWidth="120.0" text="Target Amount" />
-                    <TableColumn fx:id="currentAmountColumn" prefWidth="120.0" text="Current Amount" />
-                    <TableColumn fx:id="targetDateColumn" prefWidth="100.0" text="Target Date" />
+                    <TableColumn fx:id="goalNameColumn" prefWidth="150.0" text="Nama Target" />
+                    <TableColumn fx:id="targetAmountColumn" prefWidth="120.0" text="Target Jumlah" />
+                    <TableColumn fx:id="currentAmountColumn" prefWidth="120.0" text="Jumlah Saat Ini" />
+                    <TableColumn fx:id="targetDateColumn" prefWidth="100.0" text="Target Tanggal" />
                     <TableColumn fx:id="statusColumn" prefWidth="100.0" text="Status" />
-                    <TableColumn fx:id="progressColumn" prefWidth="100.0" text="Progress" />
+                    <TableColumn fx:id="progressColumn" prefWidth="100.0" text="Progres" />
                 </columns>
                 <columnResizePolicy>
                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
