--- a/src/main/resources/com/example/ismoney/Dashboard.fxml
+++ b/src/main/resources/com/example/ismoney/Dashboard.fxml
@@ -38,12 +38,12 @@
             <TextField editable="false" layoutX="486.0" layoutY="45.0" prefHeight="25.0" prefWidth="124.0" style="-fx-border-color: #63DBF3;" />
          </children>
       </Pane>
-      <Button fx:id="GoalsListButton" layoutX="89.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleGoalsListButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Tabungan" textFill="WHITE">
+      <Button fx:id="GoalsListButton" layoutX="89.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleGoalsListButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093; -fx-cursor: hand;" text="Tabungan" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="transactionButton" layoutX="271.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093;" text="Transaksi" textFill="WHITE">
+      <Button fx:id="transactionButton" layoutX="271.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleTransactionButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #8c0093; -fx-cursor: hand;" text="Transaksi" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -53,7 +53,7 @@
             <Label layoutX="132.0" layoutY="92.0" text="Ini nanti bebas buat apa ya dip ntah kea log expenxe sama income hari ini" />
          </children>
       </Pane>
-      <Button fx:id="logOutBtn" layoutX="556.0" layoutY="458.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #df0000;" text="Keluar" textFill="WHITE">
+      <Button fx:id="logOutBtn" layoutX="556.0" layoutY="458.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="25.0" prefWidth="151.0" style="-fx-background-color: #df0000; -fx-cursor:hand;" text="Keluar" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
