--- a/src/main/resources/com/example/ismoney/savingGoals/savingGoalForm.fxml
+++ b/src/main/resources/com/example/ismoney/savingGoals/savingGoalForm.fxml
@@ -2,11 +2,18 @@
 
 <!-- SavingGoalForm.fxml -->
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="491.0" prefWidth="756.0" style="-fx-background-color:  radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.savingGoalFormController">
+<AnchorPane prefHeight="491.0" prefWidth="756.0" style="-fx-background-color:  radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.savingGoalFormController">
 
     <Label layoutX="255.0" layoutY="25.0" text="Form Target Tabungan" textFill="#8c0093">
         <font>
@@ -53,11 +60,14 @@
                     <Font name="System Bold" size="12.0" />
                 </font>
             </Label>
-            <ComboBox fx:id="statusComboBox" prefHeight="27.0" prefWidth="175.0" style="-fx-border-color: #ddd;" />
+            <ComboBox fx:id="statusComboBox" prefHeight="27.0" prefWidth="175.0" style="-fx-border-color: #ddd; -fx-cursor: hand;" />
         </HBox>
         <HBox alignment="CENTER_RIGHT" spacing="15.0">
-            <Button fx:id="simpanButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #8c0093; -fx-text-fill: white; -fx-background-radius: 8; -fx-font-weight: bold;" text="Simpan" />
-            <Button fx:id="batalButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #f5f5f5; -fx-text-fill: #666; -fx-background-radius: 8; -fx-border-color: #ddd; -fx-border-radius: 8;" text="Batal" />
+            <Button fx:id="simpanButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #8c0093; -fx-text-fill: white; -fx-background-radius: 8; -fx-font-weight: bold; -fx-cursor: hand;" text="Simpan" />
+            <Button fx:id="batalButton" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #ea0000; -fx-background-radius: 8; -fx-border-color: #ea0000; -fx-border-radius: 8; -fx-cursor: hand;" text="Batal" textFill="WHITE">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Button>
         </HBox>
 
             <VBox spacing="8.0" style="-fx-background-color: #f8f9fa; -fx-background-radius: 8; -fx-padding: 15;">
@@ -88,6 +98,5 @@
                 </Label>
             </HBox>
         </VBox>
-
     </VBox>
 </AnchorPane>
