--- a/src/main/resources/com/example/ismoney/savingGoals/savingGoalList.fxml
+++ b/src/main/resources/com/example/ismoney/savingGoals/savingGoalList.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="491.0" prefWidth="756.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.savingGoalListController">
+<AnchorPane prefHeight="491.0" prefWidth="756.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #63DBF3 0%, #A2EEF9 60%, #FFFFFF 90%);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ismoney.controller.savingGoalListController">
     <Label layoutX="232.0" layoutY="25.0" text="Daftar Target Tabungan" textFill="#8c0093">
         <font>
             <Font name="System Bold" size="26.0" />
@@ -19,10 +26,10 @@
                 </font>
             </Label>
             <TextField fx:id="addSavingAmountField" prefWidth="150.0" promptText="Nominal" style=" -fx-border-color: #ddd;" />
-            <Button fx:id="addSavingButton" prefHeight="30.0" style="-fx-background-color: #8c0093; -fx-text-fill: white; -fx-background-radius: 5; -fx-font-weight: bold;" text="Update" />
-            <Button fx:id="GoalFormButton" prefHeight="30.0" style="-fx-background-color: #A110A8; -fx-text-fill: white; -fx-background-radius: 5; -fx-font-weight: bold;" text="Tambah" />
+            <Button fx:id="addSavingButton" prefHeight="30.0" style="-fx-background-color: #8c0093; -fx-text-fill: white; -fx-background-radius: 5; -fx-font-weight: bold; -fx-cursor: hand;" text="Update" />
+            <Button fx:id="GoalFormButton" prefHeight="30.0" style="-fx-background-color: #A110A8; -fx-text-fill: white; -fx-background-radius: 5; -fx-font-weight: bold; -fx-cursor: hand;" text="Tambah" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="refreshButton" prefHeight="30.0" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-background-radius: 5;" text="Perbarui" />
+            <Button fx:id="refreshButton" prefHeight="30.0" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-background-radius: 5; -fx-cursor: hand;" text="Perbarui" />
         </HBox>
         <VBox style="-fx-background-color: white; -fx-background-radius: 10; -fx-padding: 20;" VBox.vgrow="ALWAYS">
             <TableView fx:id="goalTableView" VBox.vgrow="ALWAYS">
@@ -40,4 +47,8 @@
             </TableView>
         </VBox>
     </VBox>
+    <Button fx:id="backButton" layoutX="50.0" layoutY="31.0" mnemonicParsing="false" onAction="#backTo" prefHeight="26.0" prefWidth="74.0" style="-fx-background-color: #007bac; -fx-cursor: hand;" text="Kembali" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Button>
 </AnchorPane>
